# DocGen

./: .gitignore  fileParser.py  language.py  main.py  pyproject.toml
DocMatcher/: __init__.py  docBlock.py  docMatcher.py  docTag.py
Language/: __init__.py  language.py  languageMatcher.py
Test/: test.lua
Test/sub/: sub.lua
langs/: __init__.py
langs/lua/: __init__.py  lua.py
langs/lua/blocks/: __init__.py  convar.py  hook.py
langs/lua/tags/: __init__.py  author.py  default.py  deprecated.py  desc.py  flags.py  ignore.py  namespace.py  note.py  param.py  realm.py  return.py
src/: docMatcher.py  fileParser.py
src/docgen/: __main__.py  fileParser.py  language.py
src/docgen/DocMatcher/: __init__.py  docBlock.py  docMatcher.py  docTag.py  topLevel.py
src/docgen/langs/: __init__.py
src/docgen/langs/lua/: __init__.py  lua.py
src/docgen/langs/lua/blocks/: __init__.py  convar.py  hook.py
src/docgen/langs/lua/tags/: __init__.py  author.py  default.py  deprecated.py  desc.py  flags.py  ignore.py  namespace.py  note.py  param.py  realm.py  return.py
src/docgen/langs/lua/top_levels/: __init__.py  class.py  module.py
src/langs/lua/: lua.py
src/langs/lua/blocks/: hook.py
src/langs/lua/tags/: __init__.py  author.py  desc.py  param.py  realm.py  return.py
src/langs/lua/top_levels/: __init__.py  module.py
src/language/: language.py  languageMatcher.py
tests/: test_cli.py  test_fileparser.py
