[project]
name = "docgen"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "gapls", email = "125091918+G4PLS@users.noreply.github.com" }
]
requires-python = ">=3.13"
dependencies = [
    "rich>=14.1.0",
    "typer>=0.17.4",
]

[project.scripts]
docgen = "docgen.__main__:app"

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.13.0",
]
